index.htmlのサイトマップにリンクを追加

--- a/index.html
+++ b/index.html
@@ -174,48 +174,49 @@
     <div class="sitekousei"><br>
       <div class="siteboxall">
       <div class="sitebox1">
-        ■TOP<br>
-        &nbsp;□自分のパソコンを守ろう！<br>
+        <a href="#" style="color: white;">■TOP</a><br>
+        &nbsp;<a href="pages/pc.html" style="color: white;">□自分のパソコンを守ろう！</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;□個人情報を守ろう！<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SNSでの個人情報<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;その他の個人情報<br>
-        &nbsp;□悪質サイトに気をつけよう！<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;フィッシング詐欺サイ<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ワンクリック詐欺サイ<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;偽のウイルス対策サイ<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;偽物のサイト
+        &nbsp;<a href="pages/priv.html" style="color: white;">□個人情報を守ろう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/priv.html#2" style="color: white;">その他の個人情報</a><br>
+        &nbsp;<a href="pages/badsite.html" style="color: white;">□悪質サイトに気をつけよう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/badsite.html#4" style="color: white;">偽物のサイト</a>
       </div>
       <div class="sitebox2"><br>
-        &nbsp;□SNSを正しく使おう！<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;位置情報問題<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;詐欺問題<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;偽情報・誤報問題<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中傷問題<br>
-        &nbsp;□会社の情報を守ろう！<br>
+        &nbsp;<a href="pages/sns.html" style="color: white;">□SNSを正しく使おう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/sns.html#1" style="color: white;">位置情報問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/sns.html#2" style="color: white;">詐欺問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/sns.html#4" style="color: white;">中傷問題</a><br>
+        &nbsp;<a href="pages/com.html" style="color: white;">□会社の情報を守ろう！</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
-        &nbsp;□IoTにもセキュリティ？<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IoTの問題<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;最近のセキュリティ研究
+        &nbsp;<a href="pages/iot.html" style="color: white;">□IoTにもセキュリティ？</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/iot.html#1" style="color: white;">IoTの問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/iot.html#2" style="color: white;">最近のセキュリティ研究</a>
       </div>
       <div class="sitebox3"><br>
-        &nbsp;□著作権を学ぼう！<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;著作物の利用<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;違法ダウンロード<br><br>
-        &nbsp;■クイズ！<br>
+        &nbsp;<a href="pages/cyo.html" style="color: white;">□著作権を学ぼう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/cyo.html#1" style="color: white;">著作物の利用</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
+        &nbsp;<a href="pages/quiz.html" style="color: white;">■クイズ！</a><br>
       </div>
       <div class="sitebox4"><br>
-        &nbsp;■InternetSecurityとは<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;InternetSecurityとは<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;サイト紹介<br>
-        &nbsp;■サイト情報<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;推奨環境<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;参考文献<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;素材利用<br>
+        &nbsp;<a href="pages/whatis.html" style="color: white;">■InternetSecurityとは</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/whatis.html#2" style="color: white;">サイト紹介</a><br>
+        &nbsp;<a href="pages/info.html" style="color: white;">■サイト情報</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/info.html#1" style="color: white;">推奨環境</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/info.html#2" style="color: white;">参考文献</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="pages/info.html#3" style="color: white;">素材利用</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;■English
+        &nbsp;<a href="pages/sitemap.html" style="color: white;">■サイトマップ</a><br>
+        &nbsp;<a href="eng.html" style="color: white;">■English</a>
       </div>
       </div>
     </div>
