--- a/pages/badsite.html
+++ b/pages/badsite.html
@@ -92,7 +92,7 @@
       <center>
       <div class="pagearticlebox">
         <div class="pagetop2">
-          <a style="color: red;">フィッシング詐欺サイト</a>
+          <a style="color: red;" name="1">フィッシング詐欺サイト</a>
         </div>
         <br>フィッシングサイトと言うのは、銀行のウェブサイトなどの個人情報を入力するページになりすまし、ユーザーを騙すことによってユーザーのクレジットカード番号や電話番号等の個人情報を盗み取ろうというサイトです。 
         <div class="pro">
@@ -119,7 +119,7 @@
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">ワンクリック詐欺サイト</a>
+          <a style="color: red;" name="2">ワンクリック詐欺サイト</a>
         </div>
         <br>何の前触れもなく、つまり「ワンクリック」で、ユーザーが入会や購入の操作をしてしまったかのように見せかけ、高額な金額を提示し支払いを迫るサイトです。また、ユーザーの不安を煽るため支払いの期限を表示したり、ユーザーのコンピューターの情報を表示したりします。また、キャンセルのために電話をかけさせようとします。 
         <div class="pro">
@@ -135,7 +135,7 @@
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">偽のアンチウイルスサイト</a>
+          <a style="color: red;" name="3">偽のアンチウイルスサイト</a>
         </div>
         <br>急に、ウイルスに感染しているかのような表示を出し、偽のアンチウイルスソフトをダウンロードするように促すサイトです。 
         <div class="pro">
@@ -147,7 +147,7 @@
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">偽のサイトや改ざんされたサイト</a>
+          <a style="color: red;" name="4">偽のサイトや改ざんされたサイト</a>
         </div>
         <br>他のサイトをコピーした偽のサイトが作られたり、企業のサーバーが不正にアクセスされて外部の人に操作されることがあります。また、これらのサイトにはウイルスが仕掛けられる事があります。 
         <div class="pro">
