--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -47,7 +47,7 @@
         <br>著作権とは、写真や動画、音楽など様々な形の<a style="color: red;">作品</a>に対してその作品を作った人に対して与えられる権利で、簡単に言えば、自分が作った作品を勝手に他の人に使われないようにする権利のことです。<br><br>
         著作権のある作品を使うには著作権を持っている人(<a style="color: red;">著作者</a>)の許可が必要になります。基本的に、インターネット上にある画像や動画には著作権があります。つまり、それらを勝手に使うことはできないということです。<br><br>
         <div class="pagetop2">
-          <a style="color: red;">著作物の利用</a>
+          <a style="color: red;" name="1">著作物の利用</a>
         </div>
         しかし、それでは「インターネット上にある画像をスマホの壁紙にすることもできないの？」と思うかもしれません。これに関しては、<a style="color: red;">私的利用</a>と言って、個人的な利用の範囲では著作者の許可なしに使うこともできます。<br><br>
         ただ、この個人的な利用と言うのは自分だけが見れる環境での使用であって、SNSなどで使う場合にはアウトです。つまりこれは<a style="color: red;">SNSのアイコン</a>にアニメ画像を使うのもアウトだということです。もちろん、テレビの動画やインターネットで見つけた画像をSNSに<a style="color: red;">アップロード</a>するのもアウトです。「SNSでアニメアイコンの人なんてたくさんいるじゃん」と思うかもしれませんが、これは著作権が<a style="color: red;">親告罪</a>という、著作者が訴えないと罪に問われないというものなので、アニメの制作会などが<a style="color: red;">黙認</a>しているという状況です。ですので、アニメアイコンにしてたからという理由で訴えられるというのは、現状ないといっていいでしょう。
@@ -67,7 +67,7 @@
           <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知ってた人</div><br>
         </div>
         <div class="pagetop2">
-          <a style="color: red;">違法ダウンロード</a>
+          <a style="color: red;" name="2">違法ダウンロード</a>
         </div>
         <br>中高生の著作権に関わる大きな問題の一つが、違法ダウンロードです。違法ダウンロードとは、ネット上に違法にアップロードされた動画や音楽などを許可なくダウンロードすることで、犯罪になります。誰でも簡単にできるようなことですが、犯罪なので絶対にしないようにしましょう。
         <div class="pro">
