--- a/pages/info.html
+++ b/pages/info.html
@@ -53,7 +53,7 @@
           <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー System ー </span>
         </center>
         <center>
-          <span class="topicjpn">推奨環境</span>
+          <span class="topicjpn"><a name="1">推奨環境</a></span>
         </center>
       </div>
     </div>
@@ -91,7 +91,7 @@
           <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー Bibliography ー </span>
         </center>
         <center>
-          <span class="topicjpn">参考文献</span>
+          <span class="topicjpn"><a name="2">参考文献</a></span>
         </center>
       </div>
     </div>
@@ -134,7 +134,7 @@
           <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー Materials ー </span>
         </center>
         <center>
-          <span class="topicjpn">素材利用</span>
+          <span class="topicjpn"><a name="3">素材利用</a></span>
         </center>
       </div>
     </div>
