--- a/pages/iot.html
+++ b/pages/iot.html
@@ -54,7 +54,7 @@
 			<center>
 				<div class="pagearticlebox">
 					<div class="pagetop2">
-						<a style="color: red;">IoT</a>の問題
+						<a style="color: red;" name="1">IoT</a>の問題
 					</div><br>
 					IoT機器のセキュリティは安全なのでしょうか。最近研究されている分野なのでセキュリティがまだまだ<a style="color: red;">甘い</a>のではないでしょうか。<br>
 					<br>
@@ -83,7 +83,7 @@
 					</center><br>
 					<br>
 					<div class="pagetop2">
-						<a style="color: red;">詐欺</a>問題
+						<a style="color: red;" name="1">最近のセキュリティ研究</a>
 					</div><br>
 					SNSでも電子メールと同じように、詐欺などの <a style="color: red;">被害</a>が多くなってきています。例えば、Twitterのタイムラインで流れてきた広告のリンクをクリックしたら、 <a style="color: red;">高額な請求</a>や <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
 					<div class="pro">
