--- a/pages/priv.html
+++ b/pages/priv.html
@@ -41,11 +41,11 @@
 	<!--記事-->
 	<center>
     <div class="pagebox">
-      <div class="pagetop">個人情報も守ろう！ </div><br>
+      <div class="pagetop">個人情報を守ろう！ </div><br>
       <center>
       <div class="pagearticlebox">
       	<div class="pagetop2">
-          <a style="color: red;">SNSでの個人情報</a>
+          <a style="color: red;" name="1">SNSでの個人情報</a>
         </div>
         <br>
         SNSを使っているときに<a style="color: red;">個人情報流出</a>が問題となってきます。個人情報が流出するとどんなことが起こると思いますか。<br><br>
@@ -64,7 +64,7 @@
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">その他の個人情報</a>
+          <a style="color: red;" name="2">その他の個人情報</a>
         </div>
         <br>
         他にも個人情報が漏れる可能性があるものとして挙げられるのが<a style="color: red;">フリーWi-Fi</a>です。フリーWi-Fiは誰でも利用できるので、攻撃者に狙われやすく特に注意が必要です。<br><br>
