--- a/pages/sns.html
+++ b/pages/sns.html
@@ -63,7 +63,7 @@
       <center>
         <div class="pagearticlebox">
         <div class="pagetop2">
-        <a style="color: red;">位置情報</a>問題
+        <a style="color: red;" name="1">位置情報</a>問題
         </div>
         <br>
           SNSの投稿で自分の現在地を他者に知られてしまい
@@ -98,7 +98,7 @@
         <br>
         <br>
         <div class="pagetop2">
-        <a style="color: red;">詐欺</a>問題
+        <a style="color: red;" name="2">詐欺</a>問題
         </div>
         <br>
         SNSでも電子メールと同じように、詐欺などの
@@ -126,7 +126,7 @@
         <br>
         <br>
         <div class="pagetop2">
-        <a style="color: red;">偽情報・誤報</a>問題
+        <a style="color: red;" name="3">偽情報・誤報</a>問題
         </div><br>
         最近ネット上で嘘の情報が拡散され世間を困らせています。
         <div class="pro">
@@ -148,7 +148,7 @@
         <br>
         <br>
         <div class="pagetop2">
-        <a style="color: red;">中傷</a>問題
+        <a style="color: red;" name="4">中傷</a>問題
         </div>
         <br>
           <div class="pagearticlebox2">SNSの投稿で自分の現在地を他者に知られてしまい
