--- a/pages/whatis.html
+++ b/pages/whatis.html
@@ -49,7 +49,7 @@
     <!--記事-->
     <center>
       <div class="pagebox">
-        <div class="pagetop">インターネットセキュリティ </div>
+        <div class="pagetop"><a name="1">インターネットセキュリティ</a></div>
         <br>
         <center>
           <div class="pagearticlebox">インターネットセキュリティとはコンピューターを
@@ -63,7 +63,7 @@
             </center>
           </div>
         </center>
-        <div class="pagetop">サイト紹介 </div>
+        <div class="pagetop"><a name="2">サイト紹介</a></div>
         <br>
         <center>
           <div class="pagearticlebox">今日の社会では、コンピュータやスマートフォンが普及し、子供またはコンピュータへの知識がない人でも
