--- a/pages/com.html
+++ b/pages/com.html
@@ -39,8 +39,57 @@
 		</div>
 	</div><br>
 	<!--記事-->
-	 <!-- サイト構成 -->
-	<div class="sitekousei"></div><!-- topボタン -->
+	<!-- サイト構成 -->
+	<div class="sitekousei"><br>
+      <div class="siteboxall">
+      <div class="sitebox1">
+        <a href="../index.html" style="color: white;">■TOP</a><br>
+        &nbsp;<a href="pc.html" style="color: white;">□自分のパソコンを守ろう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+        &nbsp;<a href="priv.html" style="color: white;">□個人情報を守ろう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#1" style="color: white;">SNSでの個人情報</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="priv.html#2" style="color: white;">その他の個人情報</a><br>
+        &nbsp;<a href="badsite.html" style="color: white;">□悪質サイトに気をつけよう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#1" style="color: white;">フィッシング詐欺サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#2" style="color: white;">ワンクリック詐欺サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#3" style="color: white;">偽のウイルス対策サイト</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="badsite.html#4" style="color: white;">偽物のサイト</a>
+      </div>
+      <div class="sitebox2"><br>
+        &nbsp;<a href="sns.html" style="color: white;">□SNSを正しく使おう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#1" style="color: white;">位置情報問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#2" style="color: white;">詐欺問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#3" style="color: white;">偽情報・誤報問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="sns.html#4" style="color: white;">中傷問題</a><br>
+        &nbsp;<a href="com.html" style="color: white;">□会社の情報を守ろう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ばばば<br>
+        &nbsp;<a href="iot.html" style="color: white;">□IoTにもセキュリティ？</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#1" style="color: white;">IoTの問題</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="iot.html#2" style="color: white;">最近のセキュリティ研究</a>
+      </div>
+      <div class="sitebox3"><br>
+        &nbsp;<a href="cyo.html" style="color: white;">□著作権を学ぼう！</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
+        &nbsp;<a href="quiz.html" style="color: white;">■クイズ！</a><br>
+      </div>
+      <div class="sitebox4"><br>
+        &nbsp;<a href="whatis.html" style="color: white;">■InternetSecurityとは</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#1" style="color: white;">InternetSecurityとは</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="whatis.html#2" style="color: white;">サイト紹介</a><br>
+        &nbsp;<a href="info.html" style="color: white;">■サイト情報</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#1" style="color: white;">推奨環境</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
+        &nbsp;<a href="sitemap.html" style="color: white;">■サイトマップ</a><br>
+        &nbsp;<a href="eng.html" style="color: white;">■English</a>
+      </div>
+      </div>
+    </div>
+	<!-- topボタン -->
 	<center>
 		<a class="totop"><img onclick="$('body, html').animate({scrollTop: 0}, 400, 'swing');" src="../img/totop.png"></a>
 	</center><!-- フッター -->
