--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -63,8 +63,9 @@
               <img src="../img/あんけ２.png" width="70%" height="70%">
             </center>
           </div>
-          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #61D836;">●</a>LINEのアイコンが法に触れる可能性があると思われる人</div><br>
-          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知ってた人</div><br>
+          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #61D836;">●</a>LINEのアイコンが法に触れる可能性があると思われる人</div>
+          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知ってた人</div>
+          <div class="ankemoji2">（高校１年生１６０人に聞きました。）&nbsp;&nbsp;&nbsp;</div>
         </div>
         <div class="pagetop2">
           <a style="color: red;" name="2">違法ダウンロード</a>
