sitemap.htmlのサイトマップにリンクを追加

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="topicbox" style="padding-bottom:5px;">
       <div class="topic">
         <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー Topic ー </span>
+          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"><a name="1">ー Topic ー</a></span>
         </center>
       </div>
     </div>
@@ -155,7 +155,7 @@
     <div class="topicbox" style="padding-bottom:5px;">
       <div class="topic">
         <center>
-          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng">ー SiteTour ー </span>
+          <span style="border-bottom: solid 1px #5E5E5E;" class="topiceng"><a name="2">ー SiteTour ー</a></span>
         </center>
       </div>
     </div>
