全ページのサイトマップにサイトツアーの欄を追加

--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -150,6 +150,9 @@
         &nbsp;<a href="cyo.html" style="color: white;font-weight: bold;">□著作権を学ぼう！</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#1" style="color: white;">著作物の利用</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cyo.html#2" style="color: white;">違法ダウンロード</a><br><br>
+        
+        &nbsp;<a href="tour.html" style="color: white;font-weight: bold;">■サイトツアー</a><br><br>
+        
         &nbsp;<a href="quiz.html" style="color: white;font-weight: bold;">■クイズ！</a><br>
       </div>
       <div class="sitebox4"><br>
@@ -161,7 +164,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#2" style="color: white;">参考文献</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="info.html#3" style="color: white;">素材利用</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;お問い合わせ<br>
-        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br>
+        &nbsp;<a href="sitemap.html" style="color: white;font-weight: bold;">■サイトマップ</a><br><br>
         &nbsp;<a href="eng.html" style="color: white;font-weight: bold;">■English</a>
       </div>
       </div>
