sitemap.htmlの改行を削除

--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -53,8 +53,7 @@
     <div class="sitemappagebox">
     <a href="../index.html" class="more">TOP</a><br><br>
 
-    <a href="../index.html#1" class="more" id="articles" tyle="float: left;">記事</a>
-
+    <a href="../index.html#1" class="more" id="articles">記事</a>
     <a href="pc.html" class="more" id="pc" style="float: right;">自分のパソコンを守ろう！</a><br><br><br>
     <a href="pc.html#1" class="more2" style="float: right;">ばばば</a><br><br><br>
     <a href="pc.html#2" class="more2" id="twobox" style="float: right;">ばばば</a><br><br><br>
