--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -51,6 +51,7 @@
         </div>
         しかし、それでは「インターネット上にある画像をスマホの壁紙にすることもできないの？」と思うかもしれません。これに関しては、<a style="color: red;">私的利用</a>と言って、個人的な利用の範囲では著作者の許可なしに使うこともできます。<br><br>
         ただ、この個人的な利用と言うのは自分だけが見れる環境での使用であって、SNSなどで使う場合にはアウトです。つまりこれは<a style="color: red;">SNSのアイコン</a>にアニメ画像を使うのもアウトだということです。もちろん、テレビの動画やインターネットで見つけた画像をSNSに<a style="color: red;">アップロード</a>するのもアウトです。「SNSでアニメアイコンの人なんてたくさんいるじゃん」と思うかもしれませんが、これは著作権が<a style="color: red;">親告罪</a>という、著作者が訴えないと罪に問われないというものなので、アニメの制作会などが<a style="color: red;">黙認</a>しているという状況です。ですので、アニメアイコンにしてたからという理由で訴えられるというのは、現状ないといっていいでしょう。
+        <br><br>
         <div class="ankebox">
           <div class="ankejissi">&nbsp;アンケートを実施！&nbsp;</div><br>
           <div class="anke1box">
@@ -64,9 +65,11 @@
             </center>
           </div>
           <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #61D836;">●</a>LINEのアイコンが法に触れる可能性があると思われる人</div>
-          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知ってた人</div>
+          <div class="ankemoji1">&nbsp;&nbsp;&nbsp;<a style="color: #00A2FF;">●</a>SNSのアイコンに有名人・アニメなどの画像を使う事がいけない事だと知ってた人</div>
           <div class="ankemoji2">（高校１年生１６０人に調査）&nbsp;&nbsp;&nbsp;</div>
-        </div>
+        </div><br>
+        このアンケートの結果から、LINEのアイコンが法に触れる可能性があると思われる人とSNSのアイコンに有名人・アニメの画像などを使う事がいけない事だと知らなかった人の割合がほぼ同じなので、SNSのアイコンにそれらの画像を使うことがいけないことだと知らなかった人がLINEのアイコンを法に触れる可能性がある画像にしていたのだと想像しますが、どうやら<a style="color: red;">それは違うようです</a>。<br>
+				SNSのアイコンに有名人・アニメなどの画像を使う事がいけない事だと知ってた人でもLINEのアイコンにそれらの画像を使っていたのです！このことから高校生の<a style="color: red;">著作権に対する意識はとても低い</a>ものだと感じました。
         <div class="pagetop2">
           <a style="color: red;" name="2">違法ダウンロード</a>
         </div>
