IoTの説明の画像を追加

--- a/pages/iot.html
+++ b/pages/iot.html
@@ -48,9 +48,12 @@
 				<div class="pagearticlebox">
 					最近は多くの「<a style="color: red;">モノ</a>」がインターネットで繋がるようになってきています。この仕組みを「<a style="color: red;">モノのインターネット</a>、<a style="color: red;">IoT</a>(Internet of Things)」と言います。<br>
 					<br>
-					IoT製品の例を挙げると、例えば玄関の鍵をインターネットにつなげスマホで施錠ができる製品や外出中もペットや子供を見守る事ができるようマイク・スピーカーが搭載された監視カメラ、家の人の出入りをスマホで確認できる防犯機器、外出中もスマホで操作して家の掃除ができるロボット掃除機、スマホで操作できるライトなど多くの電子機器が<a style="color: red;">インターネット</a>に繋がるようになってきています。
+					IoT製品の例を挙げると、例えば玄関の鍵をインターネットにつなげスマホで施錠ができる製品や外出中もペットや子供を見守る事ができるようマイク・スピーカーが搭載された監視カメラ、家の人の出入りをスマホで確認できる防犯機器、外出中もスマホで操作して家の掃除ができるロボット掃除機、スマホで操作できるライトなど多くの電子機器が<a style="color: red;">インターネット</a>に繋がるようになってきています。<br>
+					<center>
+              <img src="../img/iot2.png" width="85%" style="padding-top:0px;">
+           </center>
 				</div>
-			</center><br>
+			</center>
 			<center>
 				<div class="pagearticlebox">
 					<div class="pagetop2">
