前頁から未記入項目を削除

--- a/pages/badsite.html
+++ b/pages/badsite.html
@@ -163,8 +163,7 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+				  未記入
 				</div>
 			</div>
     </div>
