--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -78,32 +78,33 @@
           <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
-        <div class="pagearticlebox2">よく知られていて多くの人が使っているサイトを使いましょう。ババ。。。
+        <div class="pagearticlebox2">よく知られていて多くの人が使っているサイトを使いましょう。・・・
         </div>
         </center>
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">偽のアンチウイルスサイト</a>
+          <a style="color: red;">未記入</a>
         </div>
-        <br>急に、ウイルスに感染しているかのような表示を出し、偽のアンチウイルスソフトをダウンロードするように促すサイトです。 
+        <br>
+        未記入
         <div class="pro">
           <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
-        <div class="pagearticlebox2">ワンクリック詐欺サイトと同じように、無視して画面を閉じるだけで構いません。本当にウイルスに感染しているのではないか、と不安に思うかもしれませんが、基本的にはブラウザ上でコンピューターがウイルスに感染しているかを判断することはできません。 </div>
+        <div class="pagearticlebox2">未記入</div>
         </center>
         <br>
         <br>
         <div class="pagetop2">
-          <a style="color: red;">偽のサイトや改ざんされたサイト</a>
+          <a style="color: red;">未記入</a>
         </div>
-        <br>他のサイトをコピーした偽のサイトが作られたり、企業のサーバーが不正にアクセスされて外部の人に操作されることがあります。また、これらのサイトにはウイルスが仕掛けられる事があります。 
+        <br>未記入
         <div class="pro">
           <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
         <center>
-        <div class="pagearticlebox2">URLが正しいかチェックしたり、接続先のウェブサイトが安全かどうかチェックするサービスを使うことでリスクを減らすことができます。 </div>
+        <div class="pagearticlebox2">未記入</div>
         </center>
       </div>
       </center>
@@ -112,8 +113,7 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+					未記入
 				</div>
 			</div>
     </div>
