--- a/pages/info.html
+++ b/pages/info.html
@@ -109,20 +109,20 @@
         </thead>
         <tbody>
           <tr>
-            <td style="text-align:left">フィッシング詐欺サイト</td>
-            <td style="text-align:left">銀行のサイト等になりすまし、個人情報を盗み出す</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr bgcolor="#d3ebff">
-            <td style="text-align:left">ワンクリック詐欺サイト</td>
-            <td style="text-align:left">本来払わなくて良い高額な料金を請求してくる</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr>
-            <td style="text-align:left">偽のアンチウイルスソフトサイト</td>
-            <td style="text-align:left">まるでコンピューターウイルスに感染しているかのような表示を出す</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr bgcolor="#d3ebff">
-            <td style="text-align:left">偽のサイトや改ざんされたサイト</td>
-            <td style="text-align:left">正規のサービスを受けられず、ウイルスに感染することもある</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
         </tbody>
       </table>
@@ -152,20 +152,20 @@
         </thead>
         <tbody>
           <tr>
-            <td style="text-align:left">フィッシング詐欺サイト</td>
-            <td style="text-align:left">銀行のサイト等になりすまし、個人情報を盗み出す</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr bgcolor="#D7F6CE">
-            <td style="text-align:left">ワンクリック詐欺サイト</td>
-            <td style="text-align:left">本来払わなくて良い高額な料金を請求してくる</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr>
-            <td style="text-align:left">偽のアンチウイルスソフトサイト</td>
-            <td style="text-align:left">まるでコンピューターウイルスに感染しているかのような表示を出す</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
           <tr bgcolor="#D7F6CE">
-            <td style="text-align:left">偽のサイトや改ざんされたサイト</td>
-            <td style="text-align:left">正規のサービスを受けられず、ウイルスに感染することもある</td>
+            <td style="text-align:left">未記入</td>
+            <td style="text-align:left">未記入</td>
           </tr>
         </tbody>
       </table>
