--- a/pages/iot.html
+++ b/pages/iot.html
@@ -88,24 +88,24 @@
 					<div class="pagetop2">
 						<a style="color: red;" name="2">最近のセキュリティ研究</a>
 					</div><br>
-					SNSでも電子メールと同じように、詐欺などの <a style="color: red;">被害</a>が多くなってきています。例えば、Twitterのタイムラインで流れてきた広告のリンクをクリックしたら、 <a style="color: red;">高額な請求</a>や <a style="color: red;">迷惑メール</a>が送られてくるといった被害が出ています。
+					未記入
 					<div class="pro">
 						<span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
 					</div>
 					<div class="pro2">
-						ブラウザの <a style="color: red;">フィルタリング</a>をオンにする
+						未記入
 					</div>
 					<center>
 						<div class="pagearticlebox2">
-							スマホやパソコンには有害なサイトをブロックするフィルタリングという機能があります。設定でフィルタリング機能をオンにしましょう。
+							未記入
 						</div>
 					</center><br>
 					<div class="pro2">
-						安易にリンクを <a style="color: red;">クリック</a>しない
+						未記入
 					</div>
 					<center>
 						<div class="pagearticlebox2">
-							SNSでは情報を自分で判断することがとても大事です。少しでも怪しいと思ったら無視するようにしましょう。
+							未記入
 						</div>
 					</center><br>
 					<br>
@@ -117,8 +117,7 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+					未記入
 				</div>
 			</div>
 		</div>
