--- a/pages/priv.html
+++ b/pages/priv.html
@@ -87,8 +87,7 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+					未記入
 				</div>
 			</div>
     </div>
