--- a/pages/sns.html
+++ b/pages/sns.html
@@ -134,15 +134,17 @@
         </div>
         <div class="pro2">情報リテラシーを身につける</div>
         <center>
-          <div class="pagearticlebox2">写真にはその写真がどこで撮られたかを示す位置情報が含まれている場合があります。スマホの設定で位置情報添付をオフにしましょう。 
+          <div class="pagearticlebox2">
+            未記入
           </div>
         </center>
         <br>
-        <div class="pro2">SNS投稿の際、位置情報
-        <a style="color: red;">添付</a>をしない
+        <div class="pro2">
+          未記入
         </div>
         <center>
-          <div class="pagearticlebox2">SNS投稿をする際、位置情報をつけることができる場合があります。位置情報をつけても良いか慎重に判断しましょう。 
+          <div class="pagearticlebox2">
+            未記入
           </div>
         </center>
         <br>
@@ -151,34 +153,26 @@
         <a style="color: red;" name="4">中傷</a>問題
         </div>
         <br>
-          <div class="pagearticlebox2">SNSの投稿で自分の現在地を他者に知られてしまい
-          <a style="color: red;">大ごと</a>になる可能性があります。
-          <br>
-          <br>例えば「友達の家でパーティーなう」といった投稿に位置情報をつけたら、それは「ここに友達の家があります」といっているようなものです。もしかしたら、いきなり見ず知らずの人が、家を訪ねてくるかもしれません。
-          <br>
-          <br>もっと
-          <a style="color: red;">恐ろしい例</a>を挙げると、家で「明日から旅行！」といった投稿を位置情報をつけて投稿するとします。あなたが留守と知った空き巣があなたの家に盗みに入るかもしれません。
-          <br>
-          <br>SNSでの投稿といった軽はずみの行動が自分だけではなく友達やその家族にまで
-          <a style="color: red;">迷惑</a>をかける可能性があります。なので位置情報をつけるときには十分
-          <a style="color: red;">注意</a>してください。
+          <div class="pagearticlebox2">未記入
 
         <div class="pro">
         <span style="border-bottom: solid 1px black"><a style="color: #FF5050;font-size:35px;">■</a> 対策　</span>
         </div>
-        <div class="pro2">写真自体の位置情報添付を
-        <a style="color: red;">オフ</a>にする
+        <div class="pro2">
+          未記入
         </div>
         <center>
-          <div class="pagearticlebox2">写真にはその写真がどこで撮られたかを示す位置情報が含まれている場合があります。スマホの設定で位置情報添付をオフにしましょう。 
+          <div class="pagearticlebox2">
+            未記入
           </div>
         </center>
         <br>
-        <div class="pro2">SNS投稿の際、位置情報
-        <a style="color: red;">添付</a>をしない
+        <div class="pro2">
+          未記入
         </div>
         <center>
-          <div class="pagearticlebox2">SNS投稿をする際、位置情報をつけることができる場合があります。位置情報をつけても良いか慎重に判断しましょう。 
+          <div class="pagearticlebox2">
+            未記入
           </div>
         </center>
         <br>
@@ -190,8 +184,7 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
-					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+					未記入
 				</div>
 			</div>
       </div>
